--- a/index.html
+++ b/index.html
@@ -4,48 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Credential Manager</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        .container {
-            display: flex;
-            flex-direction: column;
-            width: 300px;
-            border: 1px solid #ccc;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        input, button {
-            margin: 10px 0;
-            padding: 10px;
-            font-size: 16px;
-        }
-        button {
-            cursor: pointer;
-            background-color: #28a745;
-            color: white;
-            border: none;
-            border-radius: 5px;
-        }
-        button:hover {
-            background-color: #218838;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <button class="save-button" onclick="viewSavedCredentials()">Saved</button>
     <div class="container">
         <h2>Enter Your Credentials</h2>
         <input type="text" id="website" placeholder="Website/App Name" required>
         <input type="text" id="username" placeholder="Username" required>
         <input type="password" id="password" placeholder="Password" required>
-        <button onclick="saveCredentials()">Submit</button>
+        <button class="submit-button" onclick="saveCredentials()">Submit</button>
     </div>
 
     <script>
@@ -69,10 +37,17 @@
                 }
                 storedCredentials.push(credentials);
                 localStorage.setItem('credentials', JSON.stringify(storedCredentials));
-                window.location.href = 'mycredentials.html';
+                alert('Credentials saved successfully');
+                document.getElementById('website').value = '';
+                document.getElementById('username').value = '';
+                document.getElementById('password').value = '';
             } else {
                 alert('Please fill out all fields');
             }
+        }
+
+        function viewSavedCredentials() {
+            window.location.href = 'mycredentials.html';
         }
     </script>
 </body>
