--- a/mycredentials.html
+++ b/mycredentials.html
@@ -4,60 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Credentials</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            flex-direction: column;
-        }
-        .container {
-            display: flex;
-            flex-direction: column;
-            width: 300px;
-        }
-        .card {
-            border: 1px solid #ccc;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin: 10px 0;
-            position: relative;
-        }
-        .actions {
-            display: flex;
-            justify-content: space-between;
-        }
-        .btn {
-            cursor: pointer;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            padding: 5px 10px;
-            border-radius: 5px;
-            margin-top: 10px;
-        }
-        .btn:hover {
-            background-color: #0056b3;
-        }
-        .btn-delete {
-            background-color: #dc3545;
-        }
-        .btn-delete:hover {
-            background-color: #c82333;
-        }
-        input[type="search"] {
-            padding: 10px;
-            font-size: 16px;
-            margin-bottom: 20px;
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            width: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
 </head>
 <body>
     <div class="container" id="credentialsContainer">
@@ -94,6 +42,7 @@
                             </div>
                         `;
                         container.appendChild(card);
+                        animateCard(card, index);
                     }
                 });
             } else {
@@ -131,6 +80,11 @@
         function filterCredentials() {
             renderCredentials();
         }
+
+        function animateCard(card, index) {
+            gsap.from(card, { duration: 1, x: 50 * (index + 1), opacity: 0, ease: "power3.out" });
+        }
     </script>
 </body>
 </html>
+
