--- a/mycredentials.html
+++ b/mycredentials.html
@@ -8,6 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
 </head>
 <body>
+    <button class="save-button"><a href="/" style="text-decoration: none;color:antiquewhite ">HOME</a></button>
     <div class="container" id="credentialsContainer">
         <h2>Saved Credentials</h2>
         <input type="search" id="searchInput" placeholder="Search by Website/App Name" oninput="filterCredentials()">
