--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <button class="save-button" onclick="viewSavedCredentials()">Saved</button>
+    <button class="save-button" onclick="viewSavedCredentials()">My Credentials</button>
     <div class="container">
         <h2>Enter Your Credentials</h2>
         <input type="text" id="website" placeholder="Website/App Name" required>
